[gd_scene load_steps=12 format=2]

[ext_resource path="res://StartMenu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Player/Idle0.png" type="Texture" id=2]
[ext_resource path="res://StartMenu_Font_60.tres" type="DynamicFont" id=3]
[ext_resource path="res://Buttons/StartGamebutton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Buttons/OptionsButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Buttons/ExitButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sprites/Player/Run1.png" type="Texture" id=7]
[ext_resource path="res://TilesModified/JungleTilesV2.tres" type="TileSet" id=8]
[ext_resource path="res://Scream Real.otf" type="DynamicFontData" id=9]
[ext_resource path="res://FadeIn/FadeIn.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]

size = 15
use_mipmaps = false
use_filter = false
font_data = ExtResource( 9 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="StartMenu" type="Control"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="InnerM" type="VBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 120.0
margin_top = 80.0
margin_right = 680.0
margin_bottom = 520.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 5
alignment = 0
_sections_unfolded = [ "Margin", "custom_constants" ]

[node name="Title" type="HBoxContainer" parent="InnerM" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 560.0
margin_bottom = 109.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 80
alignment = 1
_sections_unfolded = [ "custom_constants" ]

[node name="TextureRect" type="TextureRect" parent="InnerM/Title" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 94.0
margin_right = 158.0
margin_bottom = 109.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 7
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin" ]

[node name="Label" type="Label" parent="InnerM/Title" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 238.0
margin_right = 465.0
margin_bottom = 109.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.605469, 0.482483, 0.482483, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "JBMAP"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "custom_colors", "custom_fonts" ]

[node name="CenterMenu" type="HBoxContainer" parent="InnerM" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 114.0
margin_right = 560.0
margin_bottom = 422.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="Buttons" type="VBoxContainer" parent="InnerM/CenterMenu" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 278.0
margin_bottom = 308.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
_sections_unfolded = [ "Margin", "Size Flags" ]

[node name="StartGame" parent="InnerM/CenterMenu/Buttons" index="0" instance=ExtResource( 4 )]

margin_right = 278.0
rect_min_size = Vector2( 160, 100 )

[node name="OptionsButton" parent="InnerM/CenterMenu/Buttons" index="1" instance=ExtResource( 5 )]

margin_top = 104.0
margin_right = 278.0
margin_bottom = 204.0
rect_min_size = Vector2( 160, 100 )

[node name="ExitButton" parent="InnerM/CenterMenu/Buttons" index="2" instance=ExtResource( 6 )]

margin_top = 208.0
margin_right = 278.0
margin_bottom = 308.0
rect_min_size = Vector2( 160, 100 )

[node name="CenterContainer" type="CenterContainer" parent="InnerM/CenterMenu" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 282.0
margin_right = 560.0
margin_bottom = 308.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
use_top_left = false
_sections_unfolded = [ "Size Flags" ]

[node name="VBoxContainer" type="VBoxContainer" parent="InnerM/CenterMenu/CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 107.0
margin_top = 122.0
margin_right = 171.0
margin_bottom = 186.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="TextureRect" type="TextureRect" parent="InnerM/CenterMenu/CenterContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 64.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 7 )
stretch_mode = 0

[node name="TileMap" type="TileMap" parent="InnerM/CenterMenu/CenterContainer/VBoxContainer" index="1"]

mode = 0
tile_set = ExtResource( 8 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 196607, 0, 0, 131072, 1, 0, 131073, 1, 0, 131074, 2, 0, 262143, 3, 0, 196608, 4, 0, 196609, 4, 0, 196610, 5, 0, 327679, 15, 0, 262144, 16, 0, 262145, 16, 0, 262146, 17, 0 )
_sections_unfolded = [ "Cell", "Collision" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="InnerM" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 427.0
margin_right = 560.0
margin_bottom = 490.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.761719, 0.761719, 0.761719, 1 )
text = "Early Access  V 0.01
Made by Mohamed Mosa"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "custom_colors", "custom_fonts" ]

[node name="FadeIn" parent="." index="1" instance=ExtResource( 10 )]

visible = false

[connection signal="pressed" from="InnerM/CenterMenu/Buttons/StartGame" to="." method="_on_StartGame_pressed"]

[connection signal="pressed" from="InnerM/CenterMenu/Buttons/ExitButton" to="." method="_on_ExitButton_pressed"]

[connection signal="fadeFinished" from="FadeIn" to="." method="_on_FadeIn_fadeFinished"]


